# Mnemo

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_episodes_semantic_edges_profile_facts.py
mnemo/: __init__.py
mnemo/app/: __init__.py  main.py
mnemo/app/api/: dependencies.py
mnemo/app/api/routes/: __init__.py  memory.py  profile.py  search.py
mnemo/app/core/: config.py  security.py
mnemo/app/db/: __init__.py  models.py  qdrant.py  redis_client.py  sqlite.py
mnemo/app/models/: extraction.py  memory.py
mnemo/app/services/: __init__.py  embeddings.py
mnemo/app/services/conflict/: __init__.py  resolver.py
mnemo/app/services/extraction/: __init__.py  llm_extractor.py  pipeline.py  spacy_extractor.py
mnemo/app/services/memory/: __init__.py  episodic.py  profile.py
mnemo/app/services/retrieval/: __init__.py  bm25_search.py  budget.py  hybrid.py  vector_search.py
mnemo/app/workers/: __init__.py  extraction_worker.py  queue.py
tests/: __init__.py  conftest.py  test_api.py  test_conflict.py  test_extraction.py
