 [project]
 name = "mnemo"
 version = "0.1.0"
 description = "Mnemo — production-grade memory middleware REST API for AI agents"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
   "fastapi>=0.115",
   "uvicorn[standard]>=0.30",
   "pydantic>=2.7",
   "pydantic-settings>=2.3",
   "sqlalchemy[asyncio]>=2.0",
   "aiosqlite>=0.20",
   "alembic>=1.13",
   "qdrant-client>=1.9",
   "redis[hiredis]>=5.0",
   "arq>=0.26",
   "httpx>=0.27",
   "openai>=1.40",
   "spacy>=3.7",
   "rank-bm25>=0.2.2",
   "tiktoken>=0.7",
 ]
 
 [project.optional-dependencies]
 dev = [
   "pytest>=8.2",
   "pytest-asyncio>=0.23",
   "ruff>=0.6",
 ]
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
 testpaths = ["tests"]
 
 [tool.ruff]
 line-length = 100
 target-version = "py311"
 
 [tool.ruff.lint]
 select = ["E", "F", "I", "UP", "B"]
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"

 [tool.hatch.build.targets.wheel]
  packages = ["mnemo"]